--- a/Cherche_Valeur_Message.html
+++ b/Cherche_Valeur_Message.html
@@ -122,7 +122,7 @@
             <a href="Suppression_Dossier.html"
               ><li>Suppression des pièces d'un dossier</li></a
             >
-            <a href="Création_Dossier.html"><li>Création d'un dossier</li></a>
+            <a href="Creation_Dossier.html"><li>Création d'un dossier</li></a>
             <a href="Liste_Dossier.html"
               ><li>Obtenir une liste des fichiers d'un dossier</li></a
             >
@@ -158,7 +158,7 @@
                 <a href="Cherche_a.html"
                   ><li>Faire une recherche selon une liste de valeurs</li></a
                 >
-                <a href="Cherche_Caractères_Enregistrement.html"
+                <a href="Cherche_Caracteres_Enregistrement.html"
                   ><li>
                     Rechercher une chaine de caractères selon une base
                   </li></a
@@ -176,7 +176,7 @@
             <a href="Champs_Visibles.html"
               ><li>Compter le nombre de champs visibles</li></a
             >
-            <a href="Récupérer_Valeurs.html"
+            <a href="Recuperer_Valeurs.html"
               ><li>Récupérer les valeurs de cellules dans un userform</li></a
             >
           </ul>
