--- a/Copier_Fichier.html
+++ b/Copier_Fichier.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <img src="excel_vba.png" alt="macros vba" />
-      <h1>Chercher une valeur et renvoyer un message si trouvé</h1>
+      <h1>Copier des données</h1>
     </header>
     <nav>
       <ul>
@@ -37,7 +37,7 @@
           </ul>
         </li>
         <li>
-          <b>➧ Chercher une valeur</b>
+          ➧ Chercher une valeur
           <ul class="sous_menus">
             <a href="Cherche_Valeur_Cellule.html"
               ><li>Chercher une valeur et renvoyer la cellule</li></a
@@ -48,7 +48,7 @@
           </ul>
         </li>
         <li>
-          ➧ Copier des données
+          <b>➧ Copier des données</b>
           <ul class="sous_menus">
             <a href="Copier_Fichier.html"><li>Copier un fichier choisi</li></a>
             <a href="Copier_Ligne_Critere.html"
@@ -122,7 +122,7 @@
             <a href="Suppression_Dossier.html"
               ><li>Suppression des pièces d'un dossier</li></a
             >
-            <a href="Création_Dossier.html"><li>Création d'un dossier</li></a>
+            <a href="Creation_Dossier.html"><li>Création d'un dossier</li></a>
             <a href="Liste_Dossier.html"
               ><li>Obtenir une liste des fichiers d'un dossier</li></a
             >
@@ -158,7 +158,7 @@
                 <a href="Cherche_a.html"
                   ><li>Faire une recherche selon une liste de valeurs</li></a
                 >
-                <a href="Cherche_Caractères_Enregistrement.html"
+                <a href="Cherche_Caracteres_Enregistrement.html"
                   ><li>
                     Rechercher une chaine de caractères selon une base
                   </li></a
@@ -176,7 +176,7 @@
             <a href="Champs_Visibles.html"
               ><li>Compter le nombre de champs visibles</li></a
             >
-            <a href="Récupérer_Valeurs.html"
+            <a href="Recuperer_Valeurs.html"
               ><li>Récupérer les valeurs de cellules dans un userform</li></a
             >
           </ul>
