--- a/Deproteger.html
+++ b/Deproteger.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="Macros"
-      content="Ensemble de macros utiles permettant d'automatiser de nombreuses tâches"
-    />
+    <meta name="viewport" content="macros vba utiles" />
     <link href="style.css" rel="stylesheet" />
     <title>Vba Excel</title>
   </head>
@@ -14,13 +11,11 @@
   <body>
     <header>
       <img src="excel_vba.png" alt="macros vba" />
-      <h1>Macros utiles VBA</h1>
+      <h1>Deprotéger un fichier</h1>
     </header>
     <nav>
       <ul>
-        <li>
-          <a href="index.html"><b>Accueil</b></a>
-        </li>
+        <li><a href="index.html">Accueil</a></li>
         <li>
           ➧ Suppression de lignes
           <ul class="sous_menus">
@@ -85,7 +80,7 @@
           </ul>
         </li>
         <a href="Deproteger.html"
-          ><li>Déprotéger un fichier ou un classeur</li></a
+          ><li><b>Déprotéger un fichier ou un classeur</b></li></a
         >
         <li>
           ➧ Les Boucles
@@ -188,36 +183,129 @@
         </li>
       </ul>
     </nav>
+    <h2>Deprotéger un fichier</h2>
     <div>
       <p>
-        Ce site a pour but de répertorier un ensemble de macros utiles qui vous
-        permettent d'optimiser votre travail sur excel au quotidien
+        Cette macro permet de déprotéger un fichier excel (protection avec mot
+        de passe) :
       </p>
       <br />
-      <h2>Mais qu'est ce qu'une macro VBA ?</h2>
-      <br />
-      <p>
-        Une macro c’est un ensemble de lignes de code qui contiennent des
-        instructions. Ces instructions vont être interprétées par Excel pour
-        réaliser des tâches diverses : opérations mathématiques, opérations sur
-        des feuilles de calculs, opérations sur des fichiers... Ces instructions
-        seront toujours interprétées de la même manière et de plus, le travail
-        se réalisera beaucoup plus vite que si vous deviez refaire vous-même la
-        même tâche plusieurs fois. Le langage utilisé pour coder ces
-        instructions est le VBA (Visual Basic for Application).
-      </p>
-      <br />
-      <h2>Avantages des macros</h2>
-      <p>
-        Il y a plusieurs avantages à concevoir une macro. Tout d’abord, le
-        programme fera et refera les instructions toujours dans le même ordre.
-        Une macro vous garantit donc l’intégrité de votre travail. Et plus
-        encore, un programme va vous apporter un gain de temps dans l’exécution
-        des tâches. Imaginez que vous ayez à travailler sur un fichier d’un
-        millier de données. Pour traiter ce fichier manuellement, vous pouvez
-        avoir besoin de trois ou quatre heures alors que si vous utilisez une
-        macro, trois ou quatre secondes suffiront à traiter les données.
-      </p>
+      <pre>
+
+        Sub Deproteger()
+        Dim A As Byte, B As Byte, C As Byte, D As Byte, E As Byte
+        Dim F As Byte, G As Byte, H As Byte, I As Byte, J As Byte
+        Dim K As Byte, L As Byte, M As Byte, N As Byte, O As Byte
+        Dim Reponse As Byte, Temps As Variant
+        Dim Cible As Object, Passe As String
+        ' Demande ce qu'il faut déprotéger.
+        Reponse = MsgBox("Voulez-vous déprotéger le classeur actif ?" & vbCrLf & _
+        "Si vous répondez non, c'est la feuille active qui sera déprotégée. ", _
+        vbYesNoCancel, "Déprotectionnateur")
+        On Error Resume Next
+        ' Teste ce qu'il faut déprotéger.
+        Select Case Reponse
+        Case vbYes
+        ' Définit le classeur actif comme cible à déprotéger.
+        Set Cible = ActiveWorkbook
+        ' Teste si le classeur est protégé.
+        If Not (Cible.ProtectStructure Or Cible.ProtectWindows) Then
+        MsgBox "Le classeur actif n'est pas protégé. " & vbCrLf & _
+        vbCrLf & "Andouille !", vbOKOnly, "Déprotectionnateur"
+        Exit Sub
+        End If
+        ' Teste si le classeur est protégé sans mot de passe.
+        Err.Clear
+        Cible.Unprotect vbNullString
+        If Err = 0 Then
+        MsgBox "La protection du classeur actif a été supprimée. " _
+        & vbCrLf & "Il n'y avait pas de mot de passe. Petit rigolo !", _
+        vbOKOnly, "Déprotectionnateur"
+        Exit Sub
+        End If
+        Case vbNo
+        ' Définit la feuille active comme cible à déprotéger.
+        Set Cible = ActiveSheet
+        ' Teste si la feuille est protégée (on ne teste pas UserInterfaceOnly qui ne peut être positionné que par macro 
+        ' et n'est pas enregistré avec le classeur).
+        If Not (Cible.ProtectContents Or Cible.ProtectDrawingObjects Or _
+        Cible.ProtectScenarios) Then
+        MsgBox "La feuille active n'est pas protégée. " & vbCrLf & _
+        vbCrLf & "Patate !", vbOKOnly, "Déprotectionnateur"
+        Exit Sub
+        End If
+        ' Teste si la feuille est protégée sans mot de passe.
+        Err.Clear
+        Cible.Unprotect vbNullString
+        If Err = 0 Then
+        MsgBox "La protection de la feuille active a été supprimée. " _
+        & vbCrLf & "Il n'y avait pas de mot de passe. Quelle burne !", _
+        vbOKOnly, "Déprotectionnateur"
+        Exit Sub
+        End If
+        Case Else
+        ' Annulation demandée par l'utilisateur.
+        MsgBox String(14, " ") & "Ciao !", vbOKOnly, "Déprotectionnateur"
+        Exit Sub
+        End Select
+        ' Note l'instant de départ.
+        Temps = Timer
+        ' Boucles de calcul des mots de passe. On utilise ici les codes ascii des caractères "0" et "1".
+        For A = 48 To 49
+        For B = 48 To 49
+        For C = 48 To 49
+        For D = 48 To 49
+        For E = 48 To 49
+        For F = 48 To 49
+        For G = 48 To 49
+        For H = 48 To 49
+        For I = 48 To 49
+        For J = 48 To 49
+        For K = 48 To 49
+        For L = 48 To 49
+        For M = 48 To 49
+        For N = 48 To 49
+        For O = 48 To 49
+        ' Calcule le mot de passe.
+        Passe = Chr(A) & Chr(B) & Chr(C) & Chr(D) & Chr(E) & _
+        Chr(F) & Chr(G) & Chr(H) & Chr(I) & Chr(J) & _
+        Chr(K) & Chr(L) & Chr(M) & Chr(N) & Chr(O)
+        ' Essaie de déprotéger la cible.
+        Err.Clear
+        Cible.Unprotect Passe
+        ' Teste si la cible est bien déprotégé.
+        If Err = 0 Then
+        ' Si oui, affiche le mot de passe et sort.
+        MsgBox "La protection a été supprimée en " & _
+        Timer - Temps & " secondes. " & vbCrLf & _
+        "Le mot de passe équivalent trouvé est :" & _
+        vbCrLf & vbCrLf & String(28, " ") & Passe, _
+        vbOKOnly, "Déprotectionnateur"
+        Exit Sub
+        End If
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        Next
+        ' Message impossible à atteindre.
+        MsgBox "Mot de passe introuvable." & vbCrLf & vbCrLf & _
+        "C'est pas normal !!!", vbOKOnly, "Déprotectionnateur"
+        End Sub
+        
+                 
+        </pre
+      >
     </div>
     <footer>
       <div>&copy Samir BEN HADDOU 2021</div>
