--- a/Envoi_pj.html
+++ b/Envoi_pj.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="Macros"
-      content="Ensemble de macros utiles permettant d'automatiser de nombreuses tâches"
-    />
+    <meta name="viewport" content="macros vba utiles" />
     <link href="style.css" rel="stylesheet" />
     <title>Vba Excel</title>
   </head>
@@ -14,13 +11,11 @@
   <body>
     <header>
       <img src="excel_vba.png" alt="macros vba" />
-      <h1>Macros utiles VBA</h1>
+      <h1>Macro Outlook</h1>
     </header>
     <nav>
       <ul>
-        <li>
-          <a href="index.html"><b>Accueil</b></a>
-        </li>
+        <li><a href="index.html">Accueil</a></li>
         <li>
           ➧ Suppression de lignes
           <ul class="sous_menus">
@@ -98,7 +93,7 @@
           </ul>
         </li>
         <li>
-          ➧ Macro Outlook
+          <b>➧ Macro Outlook</b>
           <ul class="sous_menus">
             <a href="Envoi_Fichier.html"
               ><li>Envoyer un fichier par mail</li></a
@@ -188,36 +183,94 @@
         </li>
       </ul>
     </nav>
+    <h2>Envoi de mails avec pièces jointes</h2>
     <div>
       <p>
-        Ce site a pour but de répertorier un ensemble de macros utiles qui vous
-        permettent d'optimiser votre travail sur excel au quotidien
+        Cette macro permet d'envoyer des e-mails personnalisées en y ajoutant
+        plusieurs pièces jointes :
+        <br />
       </p>
-      <br />
-      <h2>Mais qu'est ce qu'une macro VBA ?</h2>
-      <br />
-      <p>
-        Une macro c’est un ensemble de lignes de code qui contiennent des
-        instructions. Ces instructions vont être interprétées par Excel pour
-        réaliser des tâches diverses : opérations mathématiques, opérations sur
-        des feuilles de calculs, opérations sur des fichiers... Ces instructions
-        seront toujours interprétées de la même manière et de plus, le travail
-        se réalisera beaucoup plus vite que si vous deviez refaire vous-même la
-        même tâche plusieurs fois. Le langage utilisé pour coder ces
-        instructions est le VBA (Visual Basic for Application).
-      </p>
-      <br />
-      <h2>Avantages des macros</h2>
-      <p>
-        Il y a plusieurs avantages à concevoir une macro. Tout d’abord, le
-        programme fera et refera les instructions toujours dans le même ordre.
-        Une macro vous garantit donc l’intégrité de votre travail. Et plus
-        encore, un programme va vous apporter un gain de temps dans l’exécution
-        des tâches. Imaginez que vous ayez à travailler sur un fichier d’un
-        millier de données. Pour traiter ce fichier manuellement, vous pouvez
-        avoir besoin de trois ou quatre heures alors que si vous utilisez une
-        macro, trois ou quatre secondes suffiront à traiter les données.
-      </p>
+
+      <pre>
+
+        Sub relance_validation()
+        Sheets("Histo").Visible = True
+        Sheets("relances").AutoFilterMode = False
+        Sheets("relances").Select
+        'Effacement de la zone tampon
+        Range("A2:A50000").Select
+        Selection.ClearContents
+        
+        Message1 = "Bonjour," & vbCrLf & vbCrLf & "Je vous remercie, par avance de me retourner la facture ci-jointe avec votre tampon ''bon à payer'' accompagné de votre signature, ou bien avec vos explications en cas de litige." & vbCrLf & vbCrLf & "Merci d'avance pour votre retour par mail." & vbCrLf & vbCrLf & "Bonne journée" & vbCrLf & vbCrLf & "Bien cordialement" & vbCrLf & vbCrLf & Range("I1") & vbCrLf & vbCrLf & "Comptable - Pole Règlement" & vbCrLf & vbCrLf & "Tél : " & Range("I2")
+        Message2 = "Bonjour," & vbCrLf & vbCrLf & "Je vous remercie, par avance de me retourner les factures ci-jointes avec votre tampon ''bon à payer'' accompagnées de votre signature, ou bien avec vos explications en cas de litige." & vbCrLf & vbCrLf & "Merci d'avance pour votre retour par mail." & vbCrLf & vbCrLf & "Bonne journée" & vbCrLf & vbCrLf & "Bien cordialement" & vbCrLf & vbCrLf & Range("I1") & vbCrLf & vbCrLf & "Comptable - Pole Règlement" & vbCrLf & vbCrLf & "Tél : " & Range("I2")
+        'Mise à jour de la liste des fichiers
+        Call liste_fichiers
+         derniereligne = Range("A65536").End(xlUp).Row
+         'Envoi de mail si "OUI dans colonne relance
+         For i = 2 To derniereligne
+         If Cells(i, 5) = "OUI" Then
+        'Dim olApp As Outlook.Application
+        Set olApp = CreateObject("outlook.application")
+                'Dim olMail As Outlook.MailItem
+                Set olMail = olApp.CreateItem(olMailItem)
+            With olMail
+          .to = Range("B" & i).Value
+          '.CC = "zzz@yy.com"
+          .Subject = "Validation Facture"
+        'en fonction du nombre de factures à relancer le message se met au singulier ou pluriel
+          If WorksheetFunction.CountIf(Range("B1:B" & derniereligne), Range("B" & i)) > 1 Then
+          .Body = Message2
+          Else
+          .Body = Message1
+          End If
+          '  Range("A1").Value & vbCrLf _ ' le fichier  comportant la macro devrait avoir les données du corps du mail dans les cellules A1...A4
+        '& Range("A2").Value & Format(Date - 1, "dd-mm-yyyy") & " ." & vbCrLf & vbCrLf _
+        '& Range("A3").Value & vbCrLf & vbCrLf _
+        '& Range("A4").Value
+          '.Attachments.Add "U:\ENCOURS\POLE REGLEMENT\FACTURES\" & Range("A" & i) & ".pdf"
+          .Attachments.Add Range("A" & i).Value
+            For k = i To derniereligne
+           If Range("B" & i).Value = Range("B" & (i + 1)).Value Then
+          .Attachments.Add Range("A" & (i + 1)).Value
+          i = i + 1
+          End If
+          Next k
+            .Send
+              End With
+            End If
+            Next i
+             'Historisation des relances
+             Range("A2:E" & derniereligne).Select
+            Selection.Copy
+            Sheets("Histo").Select
+            Range("A" & (Range("K1") + 1)).Select
+            Selection.PasteSpecial Paste:=xlPasteValuesAndNumberFormats, Operation:= _
+                xlNone, SkipBlanks:=False, Transpose:=False
+                dernier_histo = Sheets("Histo").Range("K1")
+            For j = dernier_histo To 2 Step -1
+            If Cells(j, 5) <> "OUI" Then
+            Rows(j).Delete
+            End If
+            Next j
+            'Tri de l'historique des relances du plus récent au plus ancien
+        Range("A1").Select
+            ActiveWorkbook.Worksheets("Histo").Sort.SortFields.Clear
+            ActiveWorkbook.Worksheets("Histo").Sort.SortFields.Add Key:=Range("C2:C19"), _
+                SortOn:=xlSortOnValues, Order:=xlDescending, DataOption:=xlSortNormal
+            With ActiveWorkbook.Worksheets("Histo").Sort
+                .SetRange Range("A1:E" & dernier_histo)
+                .Header = xlYes
+                .MatchCase = False
+                .Orientation = xlTopToBottom
+                .SortMethod = xlPinYin
+                .Apply
+            End With
+         Sheets("Histo").Visible = False
+        Sheets("Sommaire").Select
+           End Sub
+        
+        </pre
+      >
     </div>
     <footer>
       <div>&copy Samir BEN HADDOU 2021</div>
