Modif descriptif accueil

--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
     <div>
       <p>
         Ce site a pour but de répertorier un ensemble de macros utiles qui vous
-        permettent d'optimiser votre travail sur excel au quotidien
+        permettront d'optimiser votre travail sur excel au quotidien.
       </p>
       <br />
       <h2>Mais qu'est ce qu'une macro VBA ?</h2>
       <br />
       <p>
-        Une macro c’est un ensemble de lignes de code qui contiennent des
+        Une macro est un ensemble de lignes de code qui contiennent des
         instructions. Ces instructions vont être interprétées par Excel pour
         réaliser des tâches diverses : opérations mathématiques, opérations sur
         des feuilles de calculs, opérations sur des fichiers... Ces instructions
@@ -214,7 +214,7 @@
         Une macro vous garantit donc l’intégrité de votre travail. Et plus
         encore, un programme va vous apporter un gain de temps dans l’exécution
         des tâches. Imaginez que vous ayez à travailler sur un fichier d’un
-        millier de données. Pour traiter ce fichier manuellement, vous pouvez
+        millier de données. Pour traiter ce fichier manuellement, vous pourriez
         avoir besoin de trois ou quatre heures alors que si vous utilisez une
         macro, trois ou quatre secondes suffiront à traiter les données.
       </p>
