Correction caractère spéciaux

--- a/Cherche_a.html
+++ b/Cherche_a.html
@@ -205,7 +205,7 @@
         critere = tablo_critere(xcritere, 1)
         
             If IsNumeric(InStr(a_comparer, critere)) Then
-                If InStr(a_comparer, critere) > 0 Then
+                If InStr(a_comparer, critere) &gt; 0 Then
                     cherchea = critere
                     GoTo Fin
              End If
