--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <link href="style.css" rel="stylesheet" />
     <title>Vba Excel</title>
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FY47S0T7L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6FY47S0T7L');
+</script>
   <body>
     <header>
       <img src="excel_vba.png" alt="macros vba" />
